# root

./: CMakeLists.txt
builtins/davix/: CMakeLists.txt
cmake/modules/: CheckCompiler.cmake  RootClang.cmake  RootGCC.cmake  RootICC.cmake  SetUpLinux.cmake  SetUpMacOS.cmake
cmake/scripts/: ROOTConfig.cmake.in
core/: CMakeLists.txt
core/base/: CMakeLists.txt
core/clib/: CMakeLists.txt
core/clingutils/: CMakeLists.txt
core/cont/: CMakeLists.txt
core/foundation/: CMakeLists.txt
core/lz4/: CMakeLists.txt
core/lzma/: CMakeLists.txt
core/macosx/: CMakeLists.txt
core/meta/: CMakeLists.txt
core/multiproc/: CMakeLists.txt
core/newdelete/: CMakeLists.txt
core/textinput/: CMakeLists.txt
core/unix/: CMakeLists.txt
core/winnt/: CMakeLists.txt
core/zip/: CMakeLists.txt
